tree-sitter-dml/grammar.js
    source_file: $ => seq(
      optional($.provisional_declaration),
      optional($.device_declaration),
      optional($.bitorder_declaration),
      repeat($._device_statement)
    ),

    _device_statement: $ => choice(
      $.template_definition,
      $.object_declaration,
      $.parameter_declaration,
      $.method_declaration,
      $.is_template_statement,
      $.conditional_statement,
      $.error_statement,
      $.in_each_statement,
      $.header_block,
      $.footer_block,
      $.loggroup_declaration,
      $.constant_declaration,
      $.extern_declaration,
      $.typedef_declaration,
      $.import_statement,
      $.export_statement
    ),

    // Template definition
    method_declaration: $ => choice(
      seq(
        optional($._method_qualifiers),
        'method',
        $.identifier,
        $.method_params,
        optional('default'),
        $.compound_statement
      ),
      seq(
        'inline',
        'method',
        $.identifier,
        $.method_params,
        optional('default'),
        $.compound_statement
      )
    ),

    _method_qualifiers: $ => choice(
      'independent',
      seq('independent', 'startup'),
      seq('independent', 'startup', 'memoized')
    ),

    method_params: $ => seq(
      '(',
      optional($.c_declaration_list),
      ')',
      optional($.output_params),
      optional($.throws_spec)
    ),

    type_declaration: $ => seq(
      optional('const'),
      $._base_type,
      optional($._pointer_spec)
    ),

    _base_type: $ => choice(
      $.type_identifier,
      $.struct_type,
      $.layout_type,
      $.bitfields_type,
      $.typeof_expression,
      $.sequence_type,
      $.hook_type
    ),

    type_identifier: $ => choice(
      $.identifier,
      'char',
      'int',
      'short',
      'long',
      'float',
      'double',
      'signed',
      'unsigned',
      'void',
      'bool'
    ),

    _pointer_spec: $ => repeat1(choice(
      seq('*', optional('const')),
      'vect'
    )),

    // C declarations
    expression: $ => choice(
      // Literals
      $.integer_literal,
      $.hex_literal,
      $.binary_literal,
      $.float_literal,
      $.char_literal,
      $.string_literal,
      $.true,
      $.false,
      $.undefined,

      // Identifiers
      $.identifier,
      $.this,
      $.default,

      // Unary operators
      prec(PREC.UNARY, seq('+', $.expression)),
      prec(PREC.UNARY, seq('-', $.expression)),
      prec(PREC.UNARY, seq('!', $.expression)),
      prec(PREC.UNARY, seq('~', $.expression)),
      prec(PREC.UNARY, seq('&', $.expression)),
      prec(PREC.UNARY, seq('*', $.expression)),
      prec(PREC.UNARY, seq('++', $.expression)),
      prec(PREC.UNARY, seq('--', $.expression)),
      prec(PREC.POSTFIX, seq($.expression, '++')),
      prec(PREC.POSTFIX, seq($.expression, '--')),
      prec(PREC.UNARY, seq('sizeof', $.expression)),
      prec(PREC.UNARY, seq('sizeoftype', $.type_declaration)),
      prec(PREC.UNARY, seq('defined', $.expression)),

      // Binary operators
      prec.left(PREC.MULTIPLICATIVE, seq($.expression, '*', $.expression)),
      prec.left(PREC.MULTIPLICATIVE, seq($.expression, '/', $.expression)),
      prec.left(PREC.MULTIPLICATIVE, seq($.expression, '%', $.expression)),
      prec.left(PREC.ADDITIVE, seq($.expression, '+', $.expression)),
      prec.left(PREC.ADDITIVE, seq($.expression, '-', $.expression)),
      prec.left(PREC.SHIFT, seq($.expression, '<<', $.expression)),
      prec.left(PREC.SHIFT, seq($.expression, '>>', $.expression)),
      prec.left(PREC.RELATIONAL, seq($.expression, '<', $.expression)),
      prec.left(PREC.RELATIONAL, seq($.expression, '>', $.expression)),
      prec.left(PREC.RELATIONAL, seq($.expression, '<=', $.expression)),
      prec.left(PREC.RELATIONAL, seq($.expression, '>=', $.expression)),
      prec.left(PREC.EQUALITY, seq($.expression, '==', $.expression)),
      prec.left(PREC.EQUALITY, seq($.expression, '!=', $.expression)),
      prec.left(PREC.BITWISE_AND, seq($.expression, '&', $.expression)),
      prec.left(PREC.BITWISE_XOR, seq($.expression, '^', $.expression)),
      prec.left(PREC.BITWISE_OR, seq($.expression, '|', $.expression)),
      prec.left(PREC.LOGICAL_AND, seq($.expression, '&&', $.expression)),
      prec.left(PREC.LOGICAL_OR, seq($.expression, '||', $.expression)),

      // Ternary
      prec.right(PREC.CONDITIONAL, seq($.expression, '?', $.expression, ':', $.expression)),
      prec.right(PREC.CONDITIONAL, seq($.expression, '#?', $.expression, '#:', $.expression)),

      // Member access
      prec(PREC.POSTFIX, seq($.expression, '.', $.identifier)),
      prec(PREC.POSTFIX, seq($.expression, '->', $.identifier)),

      // Array/bit access
      prec(PREC.POSTFIX, seq($.expression, '[', $.expression, ']')),
      prec(PREC.POSTFIX, seq($.expression, '[', $.expression, ',', $.identifier, ']')),
      prec(PREC.POSTFIX, seq($.expression, '[', $.expression, ':', $.expression, ']')),
      prec(PREC.POSTFIX, seq($.expression, '[', $.expression, ':', $.expression, ',', $.identifier, ']')),

      // Function call
      prec(PREC.POSTFIX, seq($.expression, '(', ')')),
      prec(PREC.POSTFIX, seq($.expression, '(', $.expression_list, ')')),
      prec(PREC.POSTFIX, seq($.expression, '(', $.expression_list, ',', ')')),

      // Type operations
      prec(PREC.CAST, seq('cast', '(', $.expression, ',', $.type_declaration, ')')),
      prec(PREC.UNARY, seq('new', $.type_declaration)),
      prec(PREC.UNARY, seq('new', $.type_declaration, '[', $.expression, ']')),

      // Array literal
      seq('[', $.expression_list, ']'),

      // Each expression
      seq('each', $.identifier, 'in', '(', $.expression, ')'),

      // Grouping
      seq('(', $.expression, ')')
    ),

    expression_list: $ => seq(
      $.expression,
      repeat(seq(',', $.expression))
    ),

    // Statements
    compound_statement: $ => seq(
      '{',
      repeat($.statement),
      '}'
    ),

    expression_statement: $ => seq($.expression, ';'),

    assignment_statement: $ => choice(
      seq($.expression, '=', $.expression, ';'),
      seq($.expression, '=', $.initializer, ';'),
      seq($.tuple_literal, '=', $.initializer, ';'),
      seq($.expression, '+=', $.expression, ';'),
      seq($.expression, '-=', $.expression, ';'),
      seq($.expression, '*=', $.expression, ';'),
      seq($.expression, '/=', $.expression, ';'),
      seq($.expression, '%=', $.expression, ';'),
      seq($.expression, '&=', $.expression, ';'),
      seq($.expression, '|=', $.expression, ';'),
      seq($.expression, '^=', $.expression, ';'),
      seq($.expression, '<<=', $.expression, ';'),
      seq($.expression, '>>=', $.expression, ';')
    ),

    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    integer_literal: $ => /[0-9]+/,

    hex_literal: $ => /0[xX][0-9a-fA-F]+/,

    this: $ => 'this',
