tree-sitter-dml/test/corpus/expressions.txt
==================
Binary expressions
==================

method test() {
    x = a + b * c;
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))
          (expression
            (expression
              (identifier))
            (expression
              (identifier))))))))

==================
Bitwise operations
==================

method test() {
    x = (a & 0xFF) | (b << 8);
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (expression
              (expression
                (identifier))
              (expression
                (hex_literal))))
          (expression
            (expression
              (expression
                (identifier))
              (expression
                (integer_literal)))))))))

==================
Ternary conditional
==================

method test() {
    x = condition ? true_value : false_value;
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))
          (expression
            (identifier))
          (expression
            (identifier)))))))

==================
Array access
==================

method test() {
    x = array[index];
    y = data[0:7];
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))
          (expression
            (identifier))))
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))
          (expression
            (integer_literal))
          (expression
            (integer_literal)))))))

==================
Member access
==================

method test() {
    x = this.field;
    y = ptr->member;
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (this))
          (identifier)))
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))
          (identifier))))))

==================
Function call
==================

method test() {
    result = function(arg1, arg2);
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))
          (expression_list
            (expression
              (identifier))
            (expression
              (identifier))))))))

==================
Cast expression
==================

method test() {
    x = cast(value, uint64);
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))
          (type_declaration
            (type_identifier
              (identifier))))))))

==================
Sizeof expression
==================

method test() {
    x = sizeof data;
    y = sizeoftype int;
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))))
      (assignment_statement
        (expression
          (identifier))
        (expression
          (type_declaration
            (type_identifier)))))))

==================
New expression
==================

method test() {
    x = new int[10];
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (assignment_statement
        (expression
          (identifier))
        (expression
          (type_declaration
            (type_identifier))
          (expression
            (integer_literal)))))))

==================
Unary operators
==================

method test() {
    x = -y;
    a = !b;
    c = ~d;
    e = ++f;
    g++;
}

---

(source_file
  (method_declaration
    (identifier)
    (method_params)
    (compound_statement
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))))
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))))
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))))
      (assignment_statement
        (expression
          (identifier))
        (expression
          (expression
            (identifier))))
      (expression_statement
        (expression
          (expression
            (identifier)))))))
